tests/analyzer/badfunccall.cm.err
Error: unknown name "y" at or near line 12
[0;31mError main:660: Error Analyzing
[0m