tests/analyzer/badfunccall.cm
/* function call with nonexistent parameters */

void bar (int x, int y)
{
    x = 1;
    y = 2;
}

void main (void)
{
    int x;
    bar(x, y);
}
